--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.1.0",
+    "axios": "^0.19.0",
+    "moment-timezone": "^0.5.26",
     "react": "^16.8.6",
+    "react-anime": "^2.2.0",
     "react-dom": "^16.8.6",
+    "react-google-calendar-api": "^1.0.10",
+    "react-moment": "^0.9.2",
+    "react-parallax": "^2.2.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
